Bug 91288 - Does not display traditional Chinese variant of Noto fonts correctly
Summary: Does not display traditional Chinese variant of Noto fonts correctly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:5.2.0 target:5.1.0.1 target:5.0.4
Keywords:
Depends on:
Blocks: CJK
  Show dependency treegraph
 
Reported: 2015-05-14 14:59 UTC by ChangZhuo Chen (陳昌倬)
Modified: 2016-10-25 19:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
document_with_U+9AA8 (8.24 KB, application/vnd.oasis.opendocument.text)
2015-05-14 15:21 UTC, ChangZhuo Chen (陳昌倬)
Details
comparison of language and font (96.56 KB, application/gzip)
2015-05-29 17:28 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ChangZhuo Chen (陳昌倬) 2015-05-14 14:59:06 UTC
Hi,

LibreOffice Writer in Debian version 1:4.4.3-1 does not display Traditional Chinese variant 骨 (U+9AA8) when using "Noto Sans CJK TC Regular" and the language text is set to "Chinese (traditional)". It is, however, display Traditional Chinese variant of 骨 (U+9AA8) when using "Noto Sans CJK TC Regular" and the language text is set to "(none)".


The correct glyph of 骨 (U+9AA8) in Traditional Chinese and Simplified Chinese is described in [0]. When using font "Noto Sans CJK TC Regular" from NotoSansCJK.ttc downloaded from [1], and the language text at the bottom center is set to "None (do not check spelling)", the Traditional Chinese variant of 骨 (U+9AA8) is displayed correctly. The problem happens when I change the language text to "Chinese (traditional)". In this configuration, the Simplified Chinese variant of 骨 (U+9AA8) is displayed. 


[0] https://github.com/adobe-fonts/source-han-sans/raw/release/SourceHanSansReadMe.pdf
[1] https://code.google.com/p/noto/source/browse/#git%2Fthird_party%2Fnoto_cjk
Comment 1 Joel Madero 2015-05-14 15:13:37 UTC
Please attach an odt file (writer file) that has the characters in it.

Marking as NEEDINFO, once you attach please set to UNCONFIRMED. Thanks!
Comment 2 ChangZhuo Chen (陳昌倬) 2015-05-14 15:21:52 UTC
Created attachment 115601 [details]
document_with_U+9AA8
Comment 3 Gordo 2015-05-29 17:28:44 UTC
Created attachment 116144 [details]
comparison of language and font

I tried doing this on Windows with just the traditional glyphs (NotoSansCJKtc-Regular.otf) and the simplified glyphs (NotoSansCJKsc-Regular.otf).  The readme says that some of the formats (ttc) are only for linux and Mac.

Using the TC font the glyph looks the same when the language is traditional, simplified, or none.

Using the SC font the glyph looks the same when the language is traditional, simplified, or none.

The TC and SC glyphs looked different.

I have attached an archive of the document, a pdf export of that document, and a screenshot of the document.  The pdf does not show the SC font.

I wouldn't think that changing the language would alter the font.

With your initial report does the same thing happen when you use a text editor or gedit?  If it does then maybe there is a bug with the font.

Other than that, hopefully somebody with linux will come along and have a look at this.

Windows Vista 64
Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16

Set to NEEDINFO.  Change back to UNCONFIRMED when you have provided the necessary information.
Comment 4 Mark Hung 2015-11-06 12:49:58 UTC
I got the same issue with ubuntu 14.04 LTS, with the package "fonts-noto-cjk" installed. Note that if the font file format is supported only under Linux, then the issue should be verified this under Linux.
Comment 5 Commit Notification 2015-11-26 12:10:50 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4424daa225e73d291a3fd64d369cdda5857f3d51

tdf#91288 Does not display traditional Chinese variant of

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-11-26 12:12:35 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ff592b85f02a1e16aa1668c874e733331e4e242b&h=libreoffice-5-1

tdf#91288 Does not display traditional Chinese variant of

It will be available in 5.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-11-26 12:12:40 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=48cf2d9fe9eea5e6fae310058b6f705553996635&h=libreoffice-5-0

tdf#91288 Does not display traditional Chinese variant of

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Adolfo Jayme Barrientos 2015-11-26 20:11:24 UTC
(Master is actually 5.2 now.)
Comment 9 ChangZhuo Chen (陳昌倬) 2015-12-22 09:10:35 UTC
Hi,

The issue is fixed in Debian libreoffice-writer version 1:5.0.4~rc2-2, thanks for the great work.