tdf#91288 Does not display traditional Chinese variant of

Noto fonts correctly.

LanguageTag()::getLanguage() would always return "zh" despite
traditional Chinese were choose. hb_language_from_string()
requires iso639-3 language tag except for Chinese, so
we use use Bcp47() language tag for Chinese to differ zh-CN and
the others.

Change-Id: I6700a79a9c49a97d840b430def77741912935f72
Reviewed-on: https://gerrit.libreoffice.org/20027
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 4424daa225e73d291a3fd64d369cdda5857f3d51)